fix: fix accessibility of contrast ratio

--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@
   --navy: #17050F;
   --blue: #082840;
   --white: #fff;
-  --darklightgray: #adadad;
+  --darklightgray: #767676;
   --mainwidth: 37.5rem;  /* 600px /16 */
   --lightblue: #5f86a7;
 }
@@ -234,7 +234,7 @@ a[href].direct-link:focus:visited,
 }
 
 .sub-home {
-  font-size: 1rem;
+  font-size: 1.1rem;
   text-align: center;
   font-weight: normal;
   color: var(--darklightgray);
